[gd_scene load_steps=11 format=2]

[ext_resource path="res://Font/iosevka-fixed-regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/Question/Question.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.772549, 0.847059, 0.427451, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.32549, 0.772549, 0.0980392, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 7

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.772549, 0.847059, 0.427451, 0.862745 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.772549, 0.847059, 0.427451, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Theme" id=4]
Button/colors/font_color = Color( 0.0823529, 0.0823529, 0.0823529, 1 )
Button/colors/font_color_disabled = Color( 0.0823529, 0.0823529, 0.0823529, 1 )
Button/colors/font_color_hover = Color( 0.0823529, 0.0823529, 0.0823529, 1 )
Button/colors/font_color_pressed = Color( 0.0823529, 0.0823529, 0.0823529, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = null
Button/styles/focus = SubResource( 1 )
Button/styles/hover = SubResource( 2 )
Button/styles/normal = SubResource( 3 )
Button/styles/pressed = SubResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 34
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
size = 35
font_data = ExtResource( 1 )

[node name="Question" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 4 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -50.0
custom_constants/separation = 20
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Time" type="Label" parent="VBoxContainer"]
margin_right = 460.0
margin_bottom = 63.0
custom_fonts/font = SubResource( 5 )
text = "0"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 83.0
margin_right = 460.0
margin_bottom = 127.0

[node name="Time2" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_right = 34.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 6 )
text = "Q:"

[node name="Time3" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 38.0
margin_right = 55.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 6 )
text = "0"

[node name="Question" type="Label" parent="VBoxContainer"]
margin_top = 147.0
margin_right = 460.0
margin_bottom = 670.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 7 )
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at massa convallis, ultrices nisl ac, elementum libero. Curabitur viverra quam non turpis tempor, id dapibus erat rhoncus. In tincidunt luctus suscipit. Vestibulum venenatis congue volutpat. Vestibulum vitae dolor scelerisque, aliquam lorem id, tincidunt dolor. Maecenas sit amet quam et purus. "
align = 3
autowrap = true

[node name="Option1" type="Button" parent="VBoxContainer"]
margin_top = 690.0
margin_right = 460.0
margin_bottom = 735.0
custom_fonts/font = SubResource( 8 )
text = "Option 1"

[node name="Option2" type="Button" parent="VBoxContainer"]
margin_top = 755.0
margin_right = 460.0
margin_bottom = 800.0
custom_fonts/font = SubResource( 8 )
text = "Option 2"

[node name="Option3" type="Button" parent="VBoxContainer"]
margin_top = 820.0
margin_right = 460.0
margin_bottom = 865.0
custom_fonts/font = SubResource( 8 )
text = "Option 3"

[node name="Option4" type="Button" parent="VBoxContainer"]
margin_top = 885.0
margin_right = 460.0
margin_bottom = 930.0
custom_fonts/font = SubResource( 8 )
text = "Option 4"

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
